<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.alexander.quiz.MainActivity">

        <TextView
            android:id="@+id/main_text_textview"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="10dp"
            android:background="@color/riddleBackgroudColor"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/riddleTextColor"
            android:textSize="16sp" />
        <!-- блок  отправки ответа-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/answer_edittext"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="3"
                android:inputType="textCapWords"
                android:hint="@string/answer_textedit" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="answerSent"
                android:text="@string/send_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/show_answer_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:visibility="gone" />

        <!--второй блок кнопок-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/show_aswer_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="3"
                android:onClick="showAnswer"
                android:text="@string/show_aswer_button" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="nextOne"
                android:text="@string/next_button" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/send_to_friend_textview"
            android:textColor="@color/sendToFriendTextColor"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/with_answer_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/with_answer_checkbox" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:onClick="sendEmail"
            android:text="@string/send_button" />


    </LinearLayout>
</ScrollView>